<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg_login"
    tools:context=".ui.activity.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/imageViewLogoLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_120sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/ic_logo"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/textViewEmailPasswordWrong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_12sdp"
                app:layout_constraintStart_toStartOf="@id/textInputLayoutEmailLogin"
                app:layout_constraintEnd_toEndOf="@id/textInputLayoutEmailLogin"
                app:layout_constraintBottom_toTopOf="@id/textInputLayoutEmailLogin"
                android:text="@string/text_email_password_incorrect"
                android:textSize="18sp"
                android:textColor="@color/errorColor"
                android:fontFamily="@font/roboto_regular"
                android:visibility="gone"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutEmailLogin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_43sdp"
                android:layout_marginTop="@dimen/_130sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                app:layout_constraintStart_toStartOf="@id/imageViewLogoLogin"
                app:layout_constraintEnd_toEndOf="@id/imageViewLogoLogin"
                app:layout_constraintTop_toBottomOf="@id/imageViewLogoLogin"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxCornerRadiusTopStart="@dimen/_18sdp"
                app:boxCornerRadiusTopEnd="@dimen/_18sdp"
                app:boxCornerRadiusBottomStart="@dimen/_18sdp"
                app:boxCornerRadiusBottomEnd="@dimen/_18sdp"
                app:boxStrokeColor="@color/blackWarm"
                android:hint="@string/text_label_email"
                app:hintTextColor="@color/blackWarm"
                app:errorEnabled="true"
                app:errorTextColor="@color/errorColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextEmailLogin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="@dimen/_18sdp"
                    android:paddingEnd="@dimen/_18sdp"
                    android:paddingTop="@dimen/_12sdp"
                    android:paddingBottom="@dimen/_12sdp"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textViewLabelInvalidEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                app:layout_constraintTop_toBottomOf="@id/textInputLayoutEmailLogin"
                app:layout_constraintStart_toStartOf="@id/textInputLayoutEmailLogin"
                android:text="@string/text_label_email_invalid"
                android:textColor="@color/errorColor"
                android:fontFamily="sans-serif-light"
                android:textSize="12sp"
                android:visibility="gone" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_43sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                app:layout_constraintStart_toStartOf="@id/imageViewLogoLogin"
                app:layout_constraintEnd_toEndOf="@id/imageViewLogoLogin"
                app:layout_constraintTop_toBottomOf="@id/textInputLayoutEmailLogin"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxCornerRadiusTopStart="@dimen/_18sdp"
                app:boxCornerRadiusTopEnd="@dimen/_18sdp"
                app:boxCornerRadiusBottomStart="@dimen/_18sdp"
                app:boxCornerRadiusBottomEnd="@dimen/_18sdp"
                app:boxStrokeColor="@color/blackWarm"
                android:hint="@string/text_label_password"
                app:hintTextColor="@color/blackWarm"
                app:passwordToggleEnabled="true"
                app:errorEnabled="true"
                app:errorTextColor="@color/errorColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPasswordLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/_18sdp"
                    android:paddingEnd="@dimen/_18sdp"
                    android:paddingTop="@dimen/_12sdp"
                    android:paddingBottom="@dimen/_12sdp"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textViewLabelInvalidPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                app:layout_constraintTop_toBottomOf="@id/textInputLayoutPasswordLogin"
                app:layout_constraintStart_toStartOf="@id/textInputLayoutPasswordLogin"
                android:text="@string/text_label_password_empty"
                android:textColor="@color/errorColor"
                android:fontFamily="sans-serif-light"
                android:textSize="12sp"
                android:visibility="gone" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonLogin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_47sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_60sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                app:layout_constraintTop_toBottomOf="@id/textInputLayoutPasswordLogin"
                app:layout_constraintStart_toStartOf="@id/imageViewLogoLogin"
                app:layout_constraintEnd_toEndOf="@id/imageViewLogoLogin"
                style="@style/AppTheme.ButtonLogin"
                app:elevation="@dimen/_220sdp"
                android:text="@string/text_label_login"/>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                app:layout_constraintTop_toTopOf="@id/textViewLabelOr"
                app:layout_constraintStart_toStartOf="@id/buttonLogin"
                app:layout_constraintEnd_toStartOf="@id/textViewLabelOr"
                app:layout_constraintBottom_toBottomOf="@id/textViewLabelOr"
                android:background="#C1BCC7"/>

            <TextView
                android:id="@+id/textViewLabelOr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/buttonLogin"
                app:layout_constraintStart_toStartOf="@id/buttonLogin"
                app:layout_constraintEnd_toEndOf="@id/buttonLogin"
                android:text="@string/text_label_or" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                app:layout_constraintTop_toTopOf="@id/textViewLabelOr"
                app:layout_constraintStart_toEndOf="@id/textViewLabelOr"
                app:layout_constraintEnd_toEndOf="@id/buttonLogin"
                app:layout_constraintBottom_toBottomOf="@id/textViewLabelOr"
                android:background="#C1BCC7"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonLoginGoogle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_47sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                app:layout_constraintTop_toBottomOf="@id/textViewLabelOr"
                app:layout_constraintStart_toStartOf="@id/imageViewLogoLogin"
                app:layout_constraintEnd_toEndOf="@id/imageViewLogoLogin"
                app:layout_constraintBottom_toBottomOf="parent"
                style="@style/Widget.MaterialComponents.Button"
                app:cornerRadius="@dimen/_18sdp"
                android:backgroundTint="#F5F1F1"
                app:elevation="@dimen/_220sdp"
                app:icon="@drawable/ic_signin_google"
                app:iconGravity="textStart"
                app:iconTint="@null"
                android:text="@string/text_label_sign_in_with_google"
                android:textColor="@color/blackWarm"
                android:textAllCaps="false"
                tools:targetApi="p" />

            <ProgressBar
                android:id="@+id/progressBarLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_12sdp"
                app:layout_constraintStart_toStartOf="@id/textViewEmailPasswordWrong"
                app:layout_constraintEnd_toEndOf="@id/textViewEmailPasswordWrong"
                app:layout_constraintBottom_toTopOf="@id/textInputLayoutEmailLogin"
                android:layout_gravity="center"
                android:visibility="gone" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>